--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ version: 1.0.0
 dependencies:
   flutter:
     sdk: flutter
+  flutter_signin_button: ^2.0.0
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   provider: ^6.0.1
