--- a/lap_fitness/pubspec.yaml
+++ b/lap_fitness/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.4 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,7 +39,7 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
   firebase_analytics: ^10.1.6
-
+  firebase_database: ^10.0.16
 dev_dependencies:
   flutter_test:
     sdk: flutter
