--- a/lap_fitness/pubspec.yaml
+++ b/lap_fitness/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/lap.png
+    - assets/images/lap2.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
