--- a/lap_fitness/pubspec.yaml
+++ b/lap_fitness/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.3.0
   firebase_analytics: ^10.1.6
   firebase_database: ^10.0.16
+  cloud_firestore: ^4.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
