--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
         "confirmpassword"
-    ]
+    ],
+    "android.home": "C:/Users/Isaac/AppData/Local/Android/Sdk"
 }
