Updated app icon

--- a/lap_fitness/android/app/src/main/AndroidManifest.xml
+++ b/lap_fitness/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
    <application
         android:label="lap_fitness"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher.png">
         <activity
             android:name=".MainActivity"
             android:exported="true"
