--- a/lap_fitness/pubspec.yaml
+++ b/lap_fitness/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_database: ^10.0.16
   cloud_firestore: ^4.5.0
   intl: ^0.17.0
+  openfoodfacts: ^1.30.1
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
