fixed blue lines with ignore statements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
-        "confirmpassword"
+        "ARGB",
+        "confirmpassword",
+        "macronutrients",
+        "Sucessfully"
     ],
     "dart.flutterSdkPath": "C:/flutter",
     "dart.sdkPath":"C:/flutter/bin"
