--- a/lap_fitness/pubspec.yaml
+++ b/lap_fitness/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   openfoodfacts: ^1.30.1
   http: ^0.13.3
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
