--- a/lap_fitness/pubspec.yaml
+++ b/lap_fitness/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   openfoodfacts: ^1.30.1
   http: ^0.13.3
   shared_preferences: ^2.0.12
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
