--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,15 @@
     "cSpell.words": [
         "ARGB",
         "confirmpassword",
+        "cupertino",
+        "Darrian",
+        "firestore",
         "macronutrients",
-        "Sucessfully"
+        "openfoodfacts",
+        "prefs",
+        "Schyler",
+        "Sucessfully",
+        "Urman"
     ],
     "dart.flutterSdkPath": "C:/flutter",
     "dart.sdkPath":"C:/flutter/bin"
